# re-gui1

./: Makefile.am  configure.ac  skin.py
data/: Makefile.am  keymap.xml  menu.xml
data/fonts/: Makefile.am
lib/python/: enigma_python.i
lib/python/Screens/: Makefile.am
lib/python/Tools/: Makefile.am
main/: bsod.cpp
