#
# WARNING: If you modify the files installed here, change the version
# number of the enigma2-fonts package in enigma2.bb.
#
installdir = $(datadir)/fonts

dist_install_DATA = \
	ae_AlMateen.ttf \
	andale.ttf \
	lcd.ttf \
	md_khmurabi_10.ttf \
	nmsbd.ttf \
	LiberationSans-Bold.ttf \
	LiberationSans-BoldItalic.ttf \
	LiberationSans-Italic.ttf \
	LiberationSans-Regular.ttf \
        micron_bold.ttf \
        nmsbd_3d.ttf \
        Roboto-Black.ttf \
        Roboto-BlackItalic.ttf \
        Roboto-Bold.ttf \
        Roboto-BoldItalic.ttf \
        Roboto-Bold.ttf \
        time.ttf \
        tiny.ttf
